--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     font-family: 'Kumbh Sans', sans-serif;
-  }
+}
+
  nav{
     display: flex;
     justify-content: space-between;
-    padding: 10px 15px 17px 10px;
+    padding-top: 10px;
+    padding-bottom:15px;
     align-items: center;
 }
-
+#logo{
+    padding-bottom: 5px;
+    padding-right: 40px;
+    padding-left: 20px;
+}
 ul {
     display: flex;
-    padding-right: 580px;
+    padding-right: 450px;
     padding-top: 15px;
 }
 li.nav-img{
     margin-left:95%;
     width:18px;
-  padding-top: 13px;
-  padding-right: 15px;
+  padding-top: 10px;
+  padding-right: 10px;
 }
-/*.list{
-justify-items: center;
-}*/
 
 li {
    color:hsl(219, 9%, 45%);
@@ -33,13 +36,19 @@ li {
     padding-left: 20px;
     justify-items: space-between;
 }
+
 hr{
-    height: 0.5px;
-     background-color: hsl(220, 14%, 75%);
+    margin-top: 10px;
+   display: block;
+    width: 100%;
+    height: 0.5px;  
+      background-color: hsl(220, 14%, 75%); 
      opacity: 0.3;
+     padding-right: 400px;
 }
+
 .container{
-    padding-top: 60px;
+    padding-top: 45px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -62,19 +71,22 @@ width: 70%;
   
 #product1{
     border-radius:10px;
-    width: 78%;
+    width: 85%;
     height: auto;
 }
 #product1:hover{
-    width: 85%;
+    background:hsl(25, 100%, 94%);
+    opacity: 0.3;
+    border: 4px solid  hsl(26, 100%, 55%);
 }
 
 h1{
     margin: 20px 0px;
     font-size:45px;
 }
+
 h3{
-    margin-top: 50px;
+    margin-top: 18%;
     font-size: 15px;
   color: hsl(26, 100%, 55%);
 }
@@ -89,7 +101,8 @@ p{
 button{
 color: white;
 background-color: hsl(26, 100%, 55%);
-padding: 15px 50px;
+padding: 15px 75px;
+height: 60px;
 border: none;
 border-radius: 8px;
 box-shadow: 0px 10px 10px hsl(25, 100%, 94%);
@@ -98,8 +111,9 @@ box-shadow: 0px 10px 10px hsl(25, 100%, 94%);
 #add-button{
     background-color:hsl(223, 64%, 98%);
     color: black;
+    height: 60px;
     font-weight: 700;
-    padding: 15px 25px;
+    padding: 15px 30px;
     margin-right: 20px;
     border: none;
     box-shadow:none;
@@ -109,8 +123,7 @@ border-radius: 8px;
     margin-left: 40px;
 }
 #minus{
-    margin-right: 40px;
-    
+    margin-right: 40px;  
 }
 
 .percent{
@@ -134,11 +147,11 @@ filter: brightness(0) invert(1);
 
 .shoes{
  display: flex;
-padding-top: 20px;
 padding-left: 2%;
-width: 40%;
+width: 43%;
 justify-content: space-evenly;
 padding-bottom: 3%;
+margin-left: 4px;
 }
 
 #small-shoes{
@@ -153,8 +166,89 @@ img#small-shoes:hover{
 #bars{
     display: none;
 }
-@media screen and(max-width:700px){
-    #bars{
+/*@media screen and(max-width:900px){
+   .main {
+     background: aqua;
+    }
+  
+}
+}*/
+/*@media screen and (max-width: 420px){ 
+    .container{ 
+     flex-direction: column;
+     flex-wrap: wrap;
+     align-items: center;
+     padding-bottom: 30px; 
+ } }
+ */
+ @media screen and (max-width: 1280px){ 
+    nav{ background-color:rgb(15, 187, 250);
+    }}
+
+ @media screen and (max-width: 800px){ 
+    nav{
+        background-color:rgb(145, 222, 145);
+     }
+     #bars{
+        padding:0px 13px;
         display: block;
+    }
+    nav{
+        display: flex;
 }
+.items{
+    display:none;
 }
+li.nav-img{
+    margin-left:400%;
+}
+hr{
+    display: none;
+}
+.container{
+    padding-top: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.main{
+    display: flex;
+    margin-left: 20px;
+    padding-left: 4%;
+    margin-right: 0;
+    width: 100%;
+     }   
+        .info{
+            width: 70%;
+        }
+        #product1{
+            width: 90%;
+        }
+      
+     p{
+    font-size: 25px;
+     }
+     button{
+        width: 100%;
+        margin-bottom: 30px;
+     }
+        #plus{
+            margin-left: 150px;
+        }
+        #minus{
+            margin-right: 150px;  
+        }  
+.shoes{
+    display:none;
+}
+
+
+     }
+      
+/*.cancel{} */
+
+
+    @media screen and (max-width: 400px){ 
+        nav{  background-color:red;
+        }
+    }
