--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ p.profile{
 }
 p.items{
     margin-right: 50px;
- 
 }
 
 .container{
@@ -61,7 +60,6 @@ width: 70%;
 #product1{
     border-radius:10px;
     width: 85%;
-    height: auto;
 }
 #product1:hover{
     background:hsl(25, 100%, 94%);
@@ -136,7 +134,7 @@ filter: brightness(0) invert(1);
 
 .shoes{
  display: flex;
-padding-left: 2%;
+padding-left: 4%;
 width: 43%;
 justify-content: space-evenly;
 padding-bottom: 3%;
@@ -144,7 +142,7 @@ margin-left: 4px;
 }
 
 #small-shoes{
-    width: 16%;
+    width: 20%;
     border-radius: 10px;
 }
 img#small-shoes:hover{
@@ -152,21 +150,49 @@ img#small-shoes:hover{
  opacity: 0.3;
  border: 4px solid  hsl(26, 100%, 55%);
 }
-#s{
+img#bars{
     display: none;
 }
 
 
+@media screen and (max-width: 1441px){ 
+    .shoes{ padding-top: 20px;
+    }
+}
 
- @media screen and (max-width: 800px){ 
-    nav{
-        background-color:rgb(145, 222, 145);
-     }
-     #logo{
+@media screen and (max-width: 1228px){ 
+    .shoes{ padding-top: 0px;
+    }
+    #logo{
+        margin-left: 120px;
+        margin-right: 30px;
+      }
+      .space{
+          width: 80px;
+      }}
+
+      @media screen and (max-width: 1142px){ 
+        img#logo{
+            margin-left: 10px;
+        }
+        .container{
+            padding-top: 5px;
+    }
+ #product1{
+    width: 92%;
+  margin-bottom:12%;
+ } 
+button{margin-top: 15px;
+}
+    .shoes{ margin-top: -90px;
+    }
+      }
+ @media screen and (max-width: 820px){ 
+     img#logo{
         margin-left: 10px;
         margin-right: 20px;
       }
-     #bars{
+     img#bars{
         margin-left: 30px;
         margin-left: 50px;
         display: block;
@@ -177,7 +203,7 @@ img#small-shoes:hover{
     p.cart{
         margin-right:20px ;
     }
-    nav{
+  nav{
         border-bottom: none;
 }
 .items{
@@ -186,8 +212,6 @@ img#small-shoes:hover{
 .profile{
     margin-top: 7px;
 }
-}
-
 .container{
     padding-top: 15px;
     display: flex;
@@ -207,7 +231,6 @@ img#small-shoes:hover{
         #product1{
             width: 90%;
         }
-      
      p{
     font-size: 25px;
      }
@@ -225,18 +248,12 @@ img#small-shoes:hover{
     display:none;
 }
 
-
-      
-/*.cancel*/
-
     @media screen and (max-width: 580px){ 
-        nav{  background-color:red;
-        }
         #logo{
             margin-left: 10px;
             margin-right: 20px;
           }
-         #bars{
+         img#bars{
             margin-left: 30px;
             margin-left: 50px;
             display: block;
@@ -250,8 +267,8 @@ img#small-shoes:hover{
     #minus{
         margin-right: 100px;  
     }
-
 }
+
 @media screen and (max-width: 400px){ 
 #plus{
     margin-left: 60px;
@@ -266,7 +283,25 @@ img#small-shoes:hover{
     }
     #minus{
         margin-right: 58px;  
-    }}
+    }
+}
     @media screen and (max-width: 360px ){ 
    button{
-    padding: 10px 60px;}
+    padding: 10px 60px;
+    }}
+    @media screen and (max-width: 360px ){ 
+        .space{
+            width: 10px;
+        }
+        p.cart{
+        padding-left: 0px;
+        margin-left: 10px;
+        }
+        #plus{
+            margin-left: 40px;
+        }
+        #minus{
+            margin-right: 40px;  
+        }
+        }
+        }
