--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,14 @@ box-shadow: 0px 10px 10px hsl(25, 100%, 94%);
     box-shadow:none;
 border-radius: 8px;
 }
+#add-button:hover{
+    background:hsl(219, 9%, 45%);
+    border: 4px solid hsl(220, 13%, 13%);
+}
+button:hover{
+    background:hsl(25, 95%, 43%);
+    border: 4px solid hsl(220, 13%, 13%);
+}
 #plus{
     margin-left: 40px;
 }
